# neural-pipeline

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: main.cpp  processor_node.cpp  producer_node.cpp  shm_bench.cpp
include/science/neural_pipeline/: pipeline.h  processor.h  producer.h  ring_buffer.h  sample.h  shared_sample.h  shm_transport.h  socket_transport.h
src/science/neural_pipeline/: pipeline.cpp  processor.cpp  producer.cpp  shm_transport.cpp  socket_transport.cpp
test/: test_ring_buffer.cpp  test_shm_transport.cpp  test_socket_transport.cpp
